--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'com.android.support:design:28.0.1'
+    implementation 'com.android.support:support-v4:28.0.1'
 }
+
 repositories {
     mavenCentral()
 }
