--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -43,7 +44,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    //kapt "androidx.room:room-compiler$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 
 }
 
