--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".controller.EditActivity"
+            android:screenOrientation="landscape"
             android:label="@string/title_activity_edit"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".controller.MainActivity">
+        <activity
+            android:name=".controller.MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
