--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.1.0'
+    
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -40,12 +42,14 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.1'
     implementation project(path: ':mysql-connector-java-5.1.48')
 
-    def room_version = "2.2.1"
+    def room_version = "2.2.2"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
+
+
 
 }
 
