--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+    <!--android:name="androidx.multidex.MultiDexApplication">-->
+    <!--android:name="android.support.multidex.MultiDexApplication" -->
+
+
         <uses-library android:name="android.test.runner"/>
 
 
