--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,16 +7,17 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.openclassrooms.realestatemanager"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
+        resConfigs "en", "fr"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -42,8 +43,6 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.1'
     implementation 'com.android.support:support-v4:28.0.1'
-    implementation project(path: ':mysql-connector-java-5.1.48')
-    implementation 'com.android.support:multidex:1.0.3'
 
     def room_version = "2.2.2"
     implementation "android.arch.lifecycle:extensions:1.1.1"
@@ -51,7 +50,6 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.3"
     implementation "androidx.room:room-ktx:2.2.3"
     kapt "android.arch.persistence.room:compiler:$room_version"
-
 
 }
 
